k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fusion
  labels:
    name: fusion
